--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2003,6 +2003,21 @@ analytic conductor of $f$ for some specific choices of $I$.
     </div>
   </li>
 
+  <!-- ============================= -->
+  <li class="paper preprint"><script language="javascript">
+      Preprint("Planik and Square Dance, two planar permutation games", ,
+      "Planik-04.pdf", 2023, 10, "Submitted");
+      nbrp();</script>
+    <div class="resumecontent">
+      The Planik is a two dimensional version of a game close to the
+  Rubik's cube. In this paper, we present this game and the group
+  theoretical background required to solve it. We adopt a low profile
+  style for students to be able to follow, and add comments aimed at a more
+  experienced audience. We end this study with notes concerning a second family of
+  games that shares similarities with the Planik.
+    </div>
+  </li>
+
     </i>
   </li>
   </ol><br>
