--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2010,7 +2010,7 @@ analytic conductor of $f$ for some specific choices of $I$.
       nbrp();</script>
     <div class="resumecontent">
       The Planik is a two dimensional version of a game close to the
-  Rubik's cube. In this paper, we present this game and the group
+  Rubik cube. In this paper, we present this game and the group
   theoretical background required to solve it. We adopt a low profile
   style for students to be able to follow, and add comments aimed at a more
   experienced audience. We end this study with notes concerning a second family of
