--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2005,7 +2005,7 @@ analytic conductor of $f$ for some specific choices of $I$.
 
   <!-- ============================= -->
   <li class="paper preprint"><script language="javascript">
-      Preprint("Planik and Square Dance, two planar permutation games", ,
+      Preprint("Planik and Square Dance, two planar permutation games","" ,
       "Planik-04.pdf", 2023, 10, "Submitted");
       nbrp();</script>
     <div class="resumecontent">
