--- a/index.html
+++ b/index.html
@@ -369,6 +369,12 @@ ALL from January 2021 onwards!</span>
 <a href="http://images.math.cnrs.fr/" class="someword">Images des
   math&eacute;matiques</a>. &Agrave; ne pas rater !
 </li>
+<li "margin-left:10px">
+<a href="https://www.arte.tv/fr/videos/RC-021426/voyages-au-pays-des-maths/"
+   class="someword">Arte: Voyage au pays des maths</a>. Des
+   vid&eacute;os propos&eacute;es par Arte, dix minutes sur une
+   question. 
+</li>
 <li><a href="http://smf.emath.fr" class="someword">La
 soci&eacute;t&eacute; math&eacute;matique de France</a> et notamment
 les
@@ -456,33 +462,8 @@ Le calcul &agrave; baguettes en Chine ancienne.
       <a href="./ServeurPerso/GP-PARI/3.01/sli-tools.el"
          class="someword" >sli-tools.el</a> 0.97 au
           moins. Utiliser f8 et C-cC-e pour voir ce  que cela donne. </li>
-    <li> Un programme
-         pour <a href="./ServeurPerso/gmail.el"
-         class="someword">
-         classer </a> une longue liste d'adresses email et leur envoyer un message. Plut&ocirc;t
-         primitif, mais bien utile aux organisateurs de rencontres. Toute bonne &acirc;me
-         ayant envie de rendre cette m&eacute;canique plus conviviale est la bienvenue ...
-         (deux scripts de shell seraient quand m&ecirc;me bien mieux !)</li>
-        </li>
 </ul>
 <br> 
-<font size=+1>Programmes MuPAD :</font>
-<br> -- en libre acc&egrave;s  m&ecirc;me si ce ne sont pas des merveilles --
-<font size=-1> <i> (which means you can use these files for free) </i></font>
-
-<ul>
-    <li> Calcul du polynome DiChromatique d'une "tour" :
-         <a href="./ServeurPerso/Dichromate.mu"
-         class="someword">Ici ! </a></li>
-         Et le fichier d'aide
-         <a href="./ServeurPerso/Dichromate.help"
-         class="someword">
-         Dichromate.help </a></li>.
-         <br> <font size=-1> <i> That's a MuPAD program that computes dichromatic
-              polynomials, especially for "towers" of graphs. See the
-              script for more details. </i></font>
-</ul>
-
 
 
 
@@ -629,12 +610,7 @@ Le calcul &agrave; baguettes en Chine ancienne.
 </center>
 
 </center>
-<A HREF="  https://number-theory-during-lockdown.webnode.com/">Number
-    Theory during Lockdown, <i>a visio international seminar on number
-    theory</i></A>
-<br />
 
-</center>
 <A HREF="https://www.i2m.univ-amu.fr/Groupe-de-Travail-Theorie-Analytique-Probabiliste?lang=fr">TAPAS, <i>Th&eacute;orie Analytique, Probabiliste et Algorithmique des Suites</i></A>
 <br />
 
