--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1973,7 +1973,8 @@ analytic conductor of $f$ for some specific choices of $I$.
 	    "PegSolitaireMNL-Dec-21-Mar-22.pdf",
 	    "http://www.ramanujanmathsociety.org/news-letter/",
 	    "Mathematics Newsletter",
-	    "vol. 32 no. 2", 2021, "35--49", "");
+	    "vol. 32 no. 2", 2021, "34--48",
+	    "https://drive.google.com/file/d/1CdZ_6hHYCGm_i2UT21l_27N7z2RH6f1h/preview");
       nbr();</script>
     <div class="resumecontent">The main problem addressed here is to
       decide whether it is or not possible to go from a given position on
