--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1364,7 +1364,7 @@ $
 	"http://dx.doi.org/10.1007/s00229-007-0115-1");
 	nbr();</script>
       <div class="resumecontent">
-	By using a sieve argument that enables us to avoid using explciit
+	By using a sieve argument that enables us to avoid using explicit
 	information of the distribution of primes in (rather large)
 	arithmetic progressions, 
 	we prove that every integer $\ge\exp(524)$&nbsp;  is a sum of seven non negative cubes.
@@ -1667,10 +1667,11 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
       Paper("Notes on the domain of exponent pairs",
-      "Julien Cassaigne and Sary Drappeau", "",
+      "Julien Cassaigne and Sary Drappeau", 
+      "ExpPairsNote-03.pdf",
       "http://www.ramanujanmathsociety.org/news-letter/",
 	    "Mathematics Newsletter",
-	    "vol. ? no. ?", 2022, "15pp", "");
+	    "vol. 33 no. 2", 2022, "9pp", "");
       nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/Julien.jpeg" width="160px"
