--- a/ServeurPerso/Past-Future/Past-Future.html
+++ b/ServeurPerso/Past-Future/Past-Future.html
@@ -27,6 +27,12 @@
   </tr>
   <tr>
     <td>
+      <img src="Giap.jpg" width="170"  title="Un h&eacute;ro, vietanamien" />
+      
+    </td>
+  </tr>
+  <tr>
+    <td>
       <img src="SurLaRouteDeTalisker.jpg" width="250"
       title="Sur la route de Talisker 2009" />
     </td>
