--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@ ALL from January 2021 onwards!</span>
 </li>
 <li "margin-left:10px">
 <a href="https://www.arte.tv/fr/videos/RC-021426/voyages-au-pays-des-maths/"
-   class="someword">Arte: Voyage au pays des maths</a>. Des
+   class="someword">Arte: Voyages au pays des maths</a>. Des
    vid&eacute;os propos&eacute;es par Arte, dix minutes sur une
    question. 
 </li>
