--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -993,7 +993,9 @@ $\sum_{q^{20r}\le s \le q^{20r}+q^{16r}}e(sa/q)\ll q^{16r}(\log q)/\sqrt{\varphi
  <!-- ============================= -->
     <li class="paper"><script language="javascript">
 	ToAppear("Exponential sums over primes with multiplicative  coefficients",
-		 "G. Kasi Viswanadham", "OR_KV_new_version-06.pdf","Mathematische Zeitschrift", 2023, 21);
+		 "G. Kasi Viswanadham",
+	"OR_KV_new_version-06.pdf","https://www.springer.com/journal/209",
+	"Mathematische Zeitschrift", 2023, 21);
 	nbr();</script>
       <div class="resumecontent">
 <img src="../trucs/kasi-viswanadh.jpeg" height="110px"
