--- a/Jeux/Solitaire/SolitaireJeu.html
+++ b/Jeux/Solitaire/SolitaireJeu.html
@@ -102,7 +102,7 @@ javascript qui permettent d'explorer ce jeu. Ou d'y jouer !
 	        <option value="d4">L'arc long</option>
 	        <option value="d32">Le flacon</option>
 	        <option value="d5">Le verre</option>
-	        <option>---------------</option>
+	    <option>---------------</option>
 	        <option value="d17">Jump!</option>
 	        <option value="d21">Une double croix</option>
 	        <option value="d22">Le cristal</option>
@@ -117,6 +117,7 @@ javascript qui permettent d'explorer ce jeu. Ou d'y jouer !
 	        <option value="d9">La spirale</option>
 	        <option value="d18">La chemin&eacute;e</option>
 	        <option value="d19">Le calvaire</option>
+	        <option value="d33">Deux carr&eacute;s</option>
             <option>---------------</option>
 	        <option value="d10">La troupe</option>
 	        <option value="d11">La fen&ecirc;tre</option>
@@ -124,6 +125,11 @@ javascript qui permettent d'explorer ce jeu. Ou d'y jouer !
 	        <option value="d13">Le bassin</option>
 	        <option value="d14">La salle de classe</option>
 	        <option value="d20">La pyramide</option>
+            <option>---------------</option>
+	        <option value="d34">Le grand E</option>
+	        <option value="d36">Le grand R</option>
+	        <option value="d37">Le grand T</option>
+	        <option value="d38">Le grand X</option>
             <option>---------------</option>
 	        <option value="d25">La croix de Malte</option>
 	        <option value="d26">&Eacute;quateur</option>
