--- a/index.html
+++ b/index.html
@@ -233,6 +233,26 @@ MathJax.Hub.Config({
 </td>
 </tr>
 </table>
+<table>
+	  <tr>
+	<td style="vertical-align:top;border:3px solid  #F4F4E9;">
+  <a href="https://www.springer.com/journal/11139"><img src="trucs/RamanujanJournal.jpg"
+  width="350pt" style="padding-left:2pt;"></a> 
+	</td>
+<td style="vertical-align:bottom;">
+    <span style="font-variant:small-caps;font-weight:bold;">
+      <a href="https://www.springer.com/journal/11139"><font size=+1>The Ramanujan Journal</font></a> 
+    </span>
+    <br><i>
+      &nbsp;&nbsp;An International Journal 
+      <br>
+      &nbsp;&nbsp;Devoted to the Areas of Mathematics Influenced by Ramanujan
+    <br>
+      &nbsp;&nbsp;
+    </i>
+</td>
+</tr>
+</table>
       </center>
 
 <center>
