--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ MathJax.Hub.Config({
 	  <tr>
 	<td style="vertical-align:top;border:3px solid  #F4F4E9;">
   <a href="https://www.springer.com/journal/11139"><img src="trucs/RamanujanJournal.jpg"
-  width="350pt" style="padding-left:2pt;"></a> 
+   style="padding-left:2pt;"></a> 
 	</td>
 <td style="vertical-align:bottom;">
     <span style="font-variant:small-caps;font-weight:bold;">
