--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2012,10 +2012,13 @@ analytic conductor of $f$ for some specific choices of $I$.
   </li>
 
   <!-- ============================= -->
-  <li class="paper preprint"><script language="javascript">
-      Preprint("Planik and Square Dance, two planar permutation games","" ,
-      "Planik-04.pdf", 2023, 10, "Submitted");
-      nbrp();</script>
+  <li class="paper"><script language="javascript">
+      Paper("Planik and Square Dance, two planar permutation games","" ,
+	    "Planik-04.pdf",
+	    "https://www.ias.ac.in/Journals/Resonance_%E2%80%93_Journal_of_Science_Education",
+	    "Resonance, Journal of Science Education",
+	    "vol. ? no. ?", 2023, "15pp", "");
+      nbr();</script>
     <div class="resumecontent">
       The Planik is a two dimensional version of a game close to the
   Rubik cube. In this paper, we present this game and the group
