--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -98,7 +98,11 @@ MathJax.Hub.Config({
 	are collected here.
   </i></font></CENTER>
 <br>
-
+  <blockquote>
+    Thanks are due to J. Avigdor from Charenton Le Pont and to
+    <a href="https://www.allenstenger.com/">Allen
+    Stenger</a>. 
+    </blockquote>
 
 
 <!-- ======================================================================= -->
@@ -108,7 +112,19 @@ MathJax.Hub.Config({
 
 
 <ol class="typos">
-  <li><span class="titre">Exercise 1.12</span>.
+
+  <li><span class="titre">P. x, Acknowledgment line 1</span>.
+    <div class="typo">french should be French.
+    </div></li>
+
+  <li><span class="titre">P. 6, line 5 of section 1.3</span>.
+    <div class="typo">
+    The last element in the list should be $p^\alpha$, not
+    $p^{\alpha - 1}$
+    </div></li>
+
+
+  <li><span class="titre">P. 8, Exercise 1.12</span>.
 
     <div class="typo"> The question should be:
       <blockquote>
@@ -120,10 +136,336 @@ MathJax.Hub.Config({
       <i> A <span style="color:#6633CC;font-weight:bold">$\frac{9}{2}$</span>
 	took the place of
 	the <span style="color:#6633CC;font-weight:bold">$\frac{2}{9}$</span>
-	in the book</i>. Thanks to J. Avigdor from Charenton Le Pont
-	for spotting this typo.
+	in the book</i>. 
       </div>
   </li>
+
+  <li><span class="titre">P. 26, line 3</span>.
+    <div class="typo">
+ <span style="color:#6633CC;font-weight:bold">$n^{\Re s - r} < 1$</span>
+							       should
+							       be
+							       <span style="color:#6633CC;font-weight:bold">$n^{\Re s - r} \le 1$</span>
+(equality occurs if $n = 1$ or if $\Re s = r$).
+    </div></li>
+
+  <li><span class="titre">P. 34, section 3.5 title</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">Unitarian</span> should be
+	 <span style="color:#6633CC;font-weight:bold">Unitary</span>.</div></li>
+
+
+  <li><span class="titre">P. 42, line 5 from bottom</span>.
+    <div class="typo">
+      ``On using $1 + \alpha_p \le \log(2n)$'':
+This inequality is true when $p=2$, where it should be "$1 + \alpha_2
+      \le \log(2n)/\log 2$". In that case $\log(1+\alpha_2)\le
+      \log\log(2n)-\log\log 2\le (1-\frac{\log\log 2}{\log\log
+      6})\log\log(2n)
+      \le 1.7 \log\log(2n)$. 
+
+      To correct the proof, set $u_2=1.7$ and $u_p=1$ when $p\ge
+      3$.
+      We have
+      $$
+      \sum_{p^{\alpha_p}\|n \\ p < P}\log(1+\alpha_p)
+				   \le \log \log(2n)\sum_{p < P} u_p
+							      \le P \log \log(2n).
+							      $$
+							      The
+      proof then proceeds as before.
+    </div></li>
+
+  <li><span class="titre">P. 44, first line</span>.
+    <div class="typo">
+    ``<span style="color:#6633CC;font-weight:bold">without prime factors $\le D$</span>'' should be ``<span style="color:#6633CC;font-weight:bold">without prime
+    factors $ > D$</span>''</div></li>
+
+  <li><span class="titre">P. 54, Exercise 5-9, part 3</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">$p$</span> should
+      be
+      <span style="color:#6633CC;font-weight:bold">$b$</span> throughout (3 places).
+    </div></li>
+
+
+  <li><span class="titre">P. 54, line 5</span>.
+    <div class="typo">
+    In ``the functions <tt>lfun</tt> and <tt>Ldata</tt>'': <tt>Ldata</tt> is a structure,
+    not a function.
+    </div></li>
+
+
+  <li><span class="titre">P. 56, Exercise 5-10, part 3</span>.
+    <div class="typo">
+    For the range of
+    summation, <span style="color:#6633CC;font-weight:bold">$d/[x/d]=m$</span>
+    should be <span style="color:#6633CC;font-weight:bold">$[x/d]=m$</span>.</div></li>
+
+
+  <li><span class="titre">P. 74, Exercise 7-6, part 3</span>.
+    <div class="typo">
+    ``whenever $g$ is absolutely continuous over every segment in $[1, \infty)$
+that vanishes at $1$'': This is not clear. It should be
+``whenever $g$ is absolutely continuous over every segment in $[1, \infty)$
+and $g$ vanishes at $1$'',
+    as it doesn't make sense to say that a segment vanishes at $1$.
+    </div></li>
+
+
+  <li><span class="titre">P. 74, Exercise 7-6, part 6</span>.
+    <div class="typo">
+<span style="color:#6633CC;font-weight:bold">Theorem 6.1</span>
+ should be <span style="color:#6633CC;font-weight:bold">Corollary 6.1</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 93, line 5</span>.
+    <div class="typo">
+      $$(1 - z^j) = 1 - \frac{z^j}{1 - z^j} \text{ should be } (1 - z^j)^{-1} = 1 + \frac{z^j}{1 - z^j}$$
+    </div></li>
+ 
+
+  <li><span class="titre">P. 93, lines 6--7</span>.
+    <div class="typo">
+      The symbol $a_j$ is being re-used here; it is already defined in
+equation (9.5) in the statement of the theorem.
+    </div></li>
+
+
+  <li><span class="titre">P. 94, Exercise 9-5, part 3</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">$M(-1; 1) = M(-1,2) = 1$</span> should be
+<span style="color:#6633CC;font-weight:bold">$M(-1; 1) = -1, M(-1,2) = 1$</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 94, Theorem 9.6</span>.
+    <div class="typo">
+      The bound
+<span style="color:#6633CC;font-weight:bold">$$
+\max(I;1/I)\le
+\exp\biggl(\frac{(\deg F+\deg G)(\beta/P)^JP}{(1-\beta/P)J}\biggr)
+$$</span>
+should be
+<span style="color:#6633CC;font-weight:bold">$$
+\max(I;1/I)\le
+\exp\biggl(\frac{2(\deg F+\deg G)(\beta/P)^JP}{(1-\beta/P)J}\biggr)
+$$</span
+    </div></li>
+
+  <li><span class="titre">P. 95, line 9</span>.
+    <div class="typo">
+      In the expression
+<span style="color:#6633CC;font-weight:bold">$
+|b_F(j) - b_G(j)| \le (\deg F + \deg G) \beta^j / j,
+$</span>
+the right-hand side should be 
+<span style="color:#6633CC;font-weight:bold">$
+2 (\deg F + \deg G) \beta^j / j,
+$</span>
+because there is a factor $2$ in equation (9.7).
+    </div></li>
+
+  <li><span class="titre">P. 95, line after equation (9.15)</span>.
+    <div class="typo">
+      In the long expression, 
+<span style="color:#6633CC;font-weight:bold">$|t \beta|^J$</span> should be 
+<span style="color:#6633CC;font-weight:bold">$|z \beta|^J$</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 96, Exercise 9-8, part 2</span>.
+    <div class="typo">
+<span style="color:#6633CC;font-weight:bold">$k \ge 2$</span> should
+be 
+<span style="color:#6633CC;font-weight:bold">$k \ge 3$</span>.
+    </div></li>
+ 
+
+  <li><span class="titre">P. 96, equation (21.3) and following</span>.
+    <div class="typo">
+      The product given here is mis-identified as
+$\mathscr{C}_1$ but should be $\mathscr{C}_2$. 
+The definition of $\mathscr{C}_1$ is in equation (0.3) on P. vii. 
+The definition of $\mathscr{C}_2$ is in equation (21.3) on P. 221. 
+Also, ``Recall that'' is incorrect here because 
+$\mathscr{C}_2$ has not been defined yet.
+    </div></li>
+ 
+
+  <li><span class="titre">P. 111, Exercise 10-4, part 1</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+``$E_n$ stands for the set of integers whose prime factors divide $n$''
+</span>should be
+<span style="color:#6633CC;font-weight:bold">
+``$E_n$ stands for the set of multiples of $n$ whose prime factors
+divide $n$''
+</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 115, line 6 from bottom</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">(7.4)</span>
+ should be <span style="color:#6633CC;font-weight:bold">(7.5)</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 117, last two lines</span>.
+    <div class="typo">
+      At the end of each
+ line, <span style="color:#6633CC;font-weight:bold">$O(1)$</span>
+ should be <span style="color:#6633CC;font-weight:bold">$O(\sqrt{x})$</span>.
+    </div></li>
+
+  <li><span class="titre">P. 119, Exercise 11-6</span>.
+    <div class="typo">
+      The last line should end with period (.).
+    </div></li>
+
+
+  <li><span class="titre">P. 122, line 7 from bottom</span>.
+    <div class="typo">
+<span style="color:#6633CC;font-weight:bold">Lemma 20.5</span>
+ should be 
+<span style="color:#6633CC;font-weight:bold">Lemma 20.4</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 124, script</span>.
+    <div class="typo">
+      The script is unbalanced in parentheses and should end with <tt>x)));}</tt>
+    </div></li>
+
+
+  <li><span class="titre">P. 124, Exercise 12-2</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">$0 < y < 3$</span>
+ should be 
+<span style="color:#6633CC;font-weight:bold">$1 < y < 3$</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 126, Exercise 12-6</span>.
+    <div class="typo">
+      The exercise ends with ``Conclude''. This is better
+      replaced by "Prove $p_n\ge \tfrac43 n\log n$".
+    </div></li>
+
+  <li><span class="titre">P. 128, line 5</span>.
+    <div class="typo">
+      In the display, 
+<span style="color:#6633CC;font-weight:bold">$7/10$</span> should be 
+<span style="color:#6633CC;font-weight:bold">$7/5$</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 128, script</span>.
+    <div class="typo">
+ This is the wrong script for this proof; it is the same script as on
+ P.  134. It should be the next one.
+<tt>
+<br>{Lambda(d) = my(dec = factor(d), P = dec[,1]);
+<br>&nbsp;&nbsp;    if(#P != 1, return(0), return(log(P[1])));}
+   <br><br>  
+{check( upperlimit ) = 
+<br>&nbsp;&nbsp;   my(res = -2/3, mymax = 0, where = 1, aux);
+<br>&nbsp;&nbsp;   for( n = 2, upperlimit,
+<br>&nbsp;&nbsp;&nbsp;&nbsp;     res += Lambda(n)/n;
+<br>&nbsp;&nbsp;&nbsp;&nbsp;     aux = max(abs(res - log(n)) , abs(res - log(n+1)));
+<br>&nbsp;&nbsp;&nbsp;&nbsp;     if( aux > mymax, mymax = aux; where = n,));
+<br>&nbsp;&nbsp;   print("When x <= ", upperlimit, " we have ");
+<br>&nbsp;&nbsp;   print("|\sum_{n<=x}Lambda(n)/n - (log x-2/3)| <= ", mymax);
+<br>&nbsp;&nbsp;   print("The maximum is reached around x = ", where);}
+</tt>
+    </div></li>
+
+
+  <li><span class="titre">P. 129, Exercise 12-11, next to last line</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">$$
+M(f) \le \left( D(f) \sum_{p \le N} \frac{1}{p} \right)^{1/2}
+\text{ should be }
+|M(f)| \le \left( D(f) \sum_{p \le N} \frac{1}{p} \right)^{1/2}.
+$$</span>
+(This stronger inequality is true, and is needed to assert the lower bound included in the 
+$o()$ on the last line.)
+    </div></li>
+
+
+
+  <li><span class="titre">P. 134, Further Reading</span>.
+    <div class="typo"><span style="color:#6633CC;font-weight:bold">
+treaty</span> should be 
+<span style="color:#6633CC;font-weight:bold">treatise</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 190, line 4 from bottom</span>.
+    <div class="typo">
+      In the displayed sum, the conditions on $d$ should be
+<span style="color:#6633CC;font-weight:bold">$d \le \sqrt{n^2 + 1}, d
+ | (n^2+1)$</span>
+ (add condition $d | (n^2+1)$)).
+    </div></li>
+
+
+  <li><span class="titre">P. 191, line 10 from bottom</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">developped</span>
+ should be 
+<span style="color:#6633CC;font-weight:bold">developed</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 231, reference [9]</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">S.D. S.D. Chowla</span>
+ should be <span style="color:#6633CC;font-weight:bold">S.D. Chowla</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 234, line 14 from bottom</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">
+$ |\zeta(\sigma)|^3 |\zeta(\sigma + i t)|^4 |\zeta(\sigma + 2 i t)|
+\ge 0 $
+</span>
+should be 
+<span style="color:#6633CC;font-weight:bold">
+$ |\zeta(\sigma)|^3 |\zeta(\sigma + i t)|^4 |\zeta(\sigma + 2 i t)|
+\ge 1 $
+</span>
+(lower bound is $1$, not $0$).
+    </div></li>
+
+  <li><span class="titre">P. 294, Exercise 29.8 title</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">Erd</span>
+ should be <span style="color:#6633CC;font-weight:bold">Erd&#337;s</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 330, item 8</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">Erd</span>
+ should be <span style="color:#6633CC;font-weight:bold">Erd&#337;s</span>.
+    </div></li>
+
+
+  <li><span class="titre">P. 330, item 9</span>.
+    <div class="typo">
+      <span style="color:#6633CC;font-weight:bold">``All the paper of
+ may''</span>
+ should be <span style="color:#6633CC;font-weight:bold">``All the papers of Ramanujan may''</span>.
+    </div></li>
+
+
+
+
+
 </ol>
 
 <br />
