--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -101,7 +101,7 @@ MathJax.Hub.Config({
   <blockquote>
     Thanks are due to J. Avigdor from Charenton Le Pont and to
     <a href="https://www.allenstenger.com/">Allen
-    Stenger</a>. 
+    Stenger</a>. (Last update: July 25th, 2023)
     </blockquote>
 
 
