--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -119,8 +119,8 @@ MathJax.Hub.Config({
 
   <li><span class="titre">P. 6, line 5 of section 1.3</span>.
     <div class="typo">
-    The last element in the list should be $p^\alpha$, not
-    $p^{\alpha - 1}$
+    The last element in the list should be <span style="color:#6633CC;font-weight:bold">$p^\alpha$</span>, not
+    <span style="color:#6633CC;font-weight:bold">$p^{\alpha - 1}$</span>.
     </div></li>
 
 
@@ -158,7 +158,7 @@ MathJax.Hub.Config({
   <li><span class="titre">P. 42, line 5 from bottom</span>.
     <div class="typo">
       ``On using $1 + \alpha_p \le \log(2n)$'':
-This inequality is true when $p=2$, where it should be "$1 + \alpha_2
+This inequality is false when $p=2$, where it should be "$1 + \alpha_2
       \le \log(2n)/\log 2$". In that case $\log(1+\alpha_2)\le
       \log\log(2n)-\log\log 2\le (1-\frac{\log\log 2}{\log\log
       6})\log\log(2n)
@@ -351,7 +351,7 @@ divide $n$''
   <li><span class="titre">P. 126, Exercise 12-6</span>.
     <div class="typo">
       The exercise ends with ``Conclude''. This is better
-      replaced by "Prove $p_n\ge \tfrac43 n\log n$".
+      replaced by "Prove that $p_n\ge \tfrac43 n\log n$".
     </div></li>
 
   <li><span class="titre">P. 128, line 5</span>.
