--- a/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
+++ b/ExcursionsInMultiplicativeNT-Typos/contenu-typos.html
@@ -200,7 +200,7 @@ This inequality is false when $p=2$, where it should be "$1 + \alpha_2
     <div class="typo">
     For the range of
     summation, <span style="color:#6633CC;font-weight:bold">$d/[x/d]=m$</span>
-    should be <span style="color:#6633CC;font-weight:bold">$[x/d]=m$</span>.</div></li>
+    should be <span style="color:#6633CC;font-weight:bold">$d:[x/d]=m$</span>.</div></li>
 
 
   <li><span class="titre">P. 74, Exercise 7-6, part 3</span>.
