--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1211,6 +1211,27 @@ $
   some restrictive conditions.
     </div>
   </li>
+  <!-- ============================= -->
+  <li class="paper"><script language="javascript">
+      Paper("An explicit upper bound for $L(1,\\chi)$ when $\\chi$ is quadratic", 
+      "D.R. Johnston et T. Trudgian", "JRT_Submitted.pdf",
+      "https://www.springer.com/journal/40993",
+      "Research in Number Theory", 
+      "vol. ?", 2023, "17pp", 
+      "");
+      nbr();</script>
+    <div class="resumecontent">
+       <img src="../trucs/johnston.jpeg" height="110px"
+	    title="D.R. Johnston">
+       <img src="../trucs/trudgian.jpeg" height="110px"
+	    title="T. Trudgian">
+	 We consider Dirichlet $L$-functions $L(s, \chi)$ where $\chi$ is a
+  non-principal quadratic character to the modulus $q$. We make
+  explicit a result due to Pintz and Stephens by showing that
+  $|L(1, \chi)|\leq \frac{1}{2}\log q$ for all $q\geq 2\cdot 10^{23}$
+  and $|L(1, \chi)|\leq \frac{9}{20}\log q$ for all $q\geq 5\cdot 10^{50}$.
+    </div>
+  </li>
 
   </ol><br>
   </li>
