--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1701,7 +1701,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
     <div class="resumecontent">
 	<img src="../trucs/Julien.jpeg" width="160px"
 	     title="Julien Cassaigne">
-      <img src="../trucs/Sary.jpeg" width="100px"
+      <img src="../trucs/Sary-Kolkata-2023-small.png" width="100px"
 	   title="Sary Drappeau">
     The theory of exponent pairs as initiated by Phillipps in 1933
     proposes pairs of exponents $(\kappa,\lambda)$ so that one has
