--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@ MathJax.Hub.Config({
 	<img class="w3-image" src="trucs/ukraine3.gif" width="60px"
 	     title = "Ukraine will stand"></dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
-<dd><a href="#Edition">Activit&eacute;s &eacute;ditoriales</a></dd>
+<dd><a href="#Edition">Participation aux comit&eacute;s &eacute;ditoriaux
+    de :</a></dd>
 <dd><a href="#GrandPublic">Liens pour le grand public</a></dd>
 <dd><a href="#Emacs">Some Emacs Utilities</a></dd>
 <dd><a href="#GP">Scripts pour GP</a></dd>
