--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@ MathJax.Hub.Config({
 	<img class="w3-image" src="trucs/ukraine3.gif" width="60px"
 	     title = "Ukraine will stand"></dt>
 <dd><a href="#Top">Retour au d&eacute;but</a></dd>
-<dd><a href="#Edition">Participation aux comit&eacute;s &eacute;ditoriaux
-    de :</a></dd>
+<dd><a href="#Edition">Comit&eacute;s &eacute;ditoriaux</a></dd>
 <dd><a href="#GrandPublic">Liens pour le grand public</a></dd>
 <dd><a href="#Emacs">Some Emacs Utilities</a></dd>
 <dd><a href="#GP">Scripts pour GP</a></dd>
@@ -184,7 +183,8 @@ MathJax.Hub.Config({
 <table>
   <tr>
     <td  style="float:left;" background="trucs/journaux-123rf-petit-3.jpg">
-      &nbsp;<font size=+1>Activit&eacute;s &eacute;ditoriales</font>:<br><br>
+      &nbsp;<font size=+1>Membre des comit&eacute;s &eacute;ditoriaux
+      des revues suivantes</font> :<br><br>
     </td>
   </tr>
 </table>
