--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -901,7 +901,67 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   $(10^{15}q)^{5/2}$. 
     </div>
   </li>
-  
+
+  <li class="paper preprint"><script language="javascript">
+      Preprint("Moebius function and primes: an identity factory with applications",
+	       "Sebastian Zuniga Alterman and Michel Balazard",
+               "BV-Mobius-IdentityFactory.pdf", 2023, 30, "Submitted");
+      nbrp();</script>
+    <div class="resumecontent">
+      <img src="../trucs/Sebastian.jpg" width="128px"
+	   title="Sebastian Zuniga Alterman">
+      <img src="../trucs/balazard.jpg" width="128px"
+	   title="Michel Balazard">
+	We study the sums
+	$\sum_{n\le X, (n,q)=1}\frac{\mu(n)\log(X/n)^k}{n^s}$  in an
+	explicit manner where
+	$k\in\{0,1\}$, 
+	$s\in\mathbb{C}$ and $\Re s>0$. To do so, we introduce a large
+	family of arithmetical identities. In an appendix, we complete this
+	work by a direct proof along similar lines of the inequality $\sum_{n\le
+	X}\Lambda(n)/n\le \log X$.
+	<br> An appendix by Michel Balazard uses a similar setting to prove
+	  that $\sum_{n\le x}\Lambda(n)/n\le \log x$.
+    </div>
+  </li>
+ 
+  <li class="paper preprint"><script language="javascript">
+      Preprint("A Moebius sum",
+	       "Sebastian Zuniga Alterman",
+               "", 2023, 30, "Submitted");
+      nbrp();</script>
+    <div class="resumecontent">
+      <img src="../trucs/Sebastian.jpg" width="128px"
+	   title="Sebastian Zuniga Alterman">
+      We first provide numerical bounds for $\Sigma_\varepsilon(X)=\sum_{\substack{d_1,d_2\le
+      X}}\frac{\mu(d_1)\mu(d_2)}{[d_1,d_2]^{1+\varepsilon}}$. We show in particular
+      that $0\le \Sigma_0(X)\le 23/40$ for every $X\ge2$ and that
+      $0\le \Sigma_\varepsilon(X)\le 27/50$ when  $3\cdot 10^{10}\le X$
+      and $\varepsilon\in[0, 1/10]$.
+    </div>
+  </li>
+ 
+  <li class="paper preprint"><script language="javascript">
+      Preprint("An explicit harmonic $L^2$-bound for the Barban \& Vehov weights",
+	       "Sebastian Zuniga Alterman",
+               "", 2023, 6, "Submitted");
+      nbrp();</script>
+    <div class="resumecontent">
+      <img src="../trucs/Sebastian.jpg" width="128px"
+	   title="Sebastian Zuniga Alterman">
+     The Barban-Vehov weights being defined below, we prove that
+      $\displaystyle
+      \sum_{n\le
+      N}\Bigl(\sum_{\substack{d|n}}\lambda(d)\Bigr)^2/n
+      \le
+      3.1\,\frac{\log N}{\log (z_2/z_1)}
+      \frac{\tau^2+\tau+1.7}{\tau-1}
+      $
+      when $N\ge z_1\ge100$ and  $z_2=z_1^\tau$ for some $\tau>1$. 
+      Two related estimates are also proved.
+    </div>
+  </li>
+ 
   </ol><br>
   </li>
 <!-- ======================================================================= -->
