--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2020,7 +2020,7 @@ e^v}}\nolimits'\frac{\Lambda(n)}n+v+\frac12\log(\frac{1-e^{v}}{1+e^v})+\gamma
       "AcharyaDrappeauGangulyRamare2022.pdf",
       "https://www.springer.com/journal/11139",
       "The Ramanujan Journal",
-      "vol. ", 2022, "14pp", "https://doi.org/10.1007/s11139-022-00688-9");
+      "vol. 62", 2023, "365-382", "https://doi.org/10.1007/s11139-022-00688-9");
       nbr();</script>
     <div class="resumecontent">
 	<img src="../trucs/Ratnadeep.jpg" width="120px"
@@ -2792,36 +2792,7 @@ corr&eacute;ligionaires (voir aussi <a href="../GdT-TAN-Store/GdT-TAN-Store.html
 <!-- ================================================================= -->
 <!-- ================================================================= -->
 <!-- ================================================================= -->
-<!-- ================================================================= -->
-<br>
-<li><div class="oddselectionaround">
-<div class="oddselectionbord"><a name="CoursNotesAutres" class="dontmention"></a>
-<br>    <font size=+2> Biblioth&egrave;que</font>
-<br>
-<br>
-<ol>
-<!-- --------------------------------------------------------------------- -->
-<li> -&#167;-
-<a class="someword" href="http://www.helsinki.fi/~ernvall/ntsummer/arc3.pdf">
- Artic Number Theory School, Turku 2011 (par M. Jutila)</a> : 
-  <emph><i>Analytic Number Theory and Number Theoretic Analysis</i></emph>. 
-<span class="moinsimportant">Une courte et dense introduction aux formules de
-  Vorono&iuml; / Atkinson et les &eacute;valuations associ&eacute;es par un
-  ma&icirc;tre du domaine.</span>
-</li>
-<!-- --------------------------------------------------------------------- -->
-<!-- --------------------------------------------------------------------- -->
-<li> -&#167;-
-<a class="someword" href="http://lmbp.uca.fr/~royer/courses/m2_afrique/VersionWeb2019.pdf">
- Le cours de Bamako 2019 (par E. Royer)</a> : 
-  <emph><i>Un cours &laquo;africain&raquo; sur les formes modulaires</i></emph>. 
-<span class="moinsimportant">D&eacute;j&agrave; tr&egrave;s complet mais pas encore
-  termin&eacute; !</span>
-</li>
-<!-- --------------------------------------------------------------------- -->
-</ol></div></div></li> <!-- fin de li CoursNotesAutres -->
 
-<br>
 <br>
 
 <!-- ================================================================= -->
