--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2094,11 +2094,12 @@ analytic conductor of $f$ for some specific choices of $I$.
 
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
-      Paper("Planik and Square Dance, two planar permutation games","" ,
+      Paper("Planik and Square Dance, two planar permutation games:
+      solving a simpler Rubik's cube with group theory","" ,
 	    "Planik-04.pdf",
-	    "https://www.ias.ac.in/Journals/Resonance_%E2%80%93_Journal_of_Science_Education",
+	    "https://www.ias.ac.in/listing/issues/reso",
 	    "Resonance, Journal of Science Education",
-	    "vol. ? no. ?", 2023, "15pp", "");
+	    "vol. 28 no. 11", 2023, "1685--1699", "");
       nbr();</script>
     <div class="resumecontent">
       The Planik is a two dimensional version of a game close to the
