--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2094,8 +2094,7 @@ analytic conductor of $f$ for some specific choices of $I$.
 
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
-      Paper("Planik and Square Dance, two planar permutation games:
-      solving a simpler Rubik's cube with group theory","" ,
+      Paper("Planik and Square Dance, two planar permutation games: solving a simpler Rubik's cube with group theory","" ,
 	    "Planik-04.pdf",
 	    "https://www.ias.ac.in/listing/issues/reso",
 	    "Resonance, Journal of Science Education",
