--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2036,7 +2036,29 @@ least prime $p$ such that $a(p)\in I$. This can be viewed as a modular form
 analogue of Vinogradov's problem on the least quadratic
 non-residue. We obtain strong explicit bounds on $p$, depending on the
 analytic conductor of $f$ for some specific choices of $I$.  
+</div>
+  <!-- ============================= -->
+<li class="paper preprint"><script language="javascript">
+      Preprint("Convolution of periodic multiplicative functions and the divisor problem",
+	       "Marco Aymone, Gopal Maiti and Priyamvad Srivasta" ,
+      "divisor-omega.pdf", 2023,9,
+      "Submitted");
+      nbrp();</script>
+  <div class="resumecontent">
+       <img src="../trucs/Marco.jpeg" width="90px"
+	   title="Marco Aymone">
+       <img src="../trucs/Gopal.jpeg" width="90px"
+	   title="Gopal Maiti">
+       <img src="../trucs/priyamvad-srivastav.jpeg" width="90px"
+	   title="Priyamvad Srivasta">
+	 <br>   
+      Let $f$ and $g$ be two multiplicative functions that are periodic,
+  non-vanishing at their period and with bounded partial sums.  We
+  prove that $\sum_{n\leq x}(f\ast g)(n)=\Omega(x^{1/4})$ when the
+  periods of $f$ and $g$, say $M_1$ and $M_2$, are squarefree.
     </div>
+  </li>
+  <!-- ============================= -->
  </li>
  <!-- ======================================================================= -->
  <!-- ======================================================================= -->
