--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -2047,7 +2047,7 @@ analytic conductor of $f$ for some specific choices of $I$.
   <div class="resumecontent">
        <img src="../trucs/Marco.jpeg" width="90px"
 	   title="Marco Aymone">
-       <img src="../trucs/Gopal.jpeg" width="90px"
+       <img src="../trucs/Gopal-small.jpeg" width="90px"
 	   title="Gopal Maiti">
        <img src="../trucs/priyamvad-srivastav.jpeg" width="90px"
 	   title="Priyamvad Srivasta">
