--- a/Maths/contenu.html
+++ b/Maths/contenu.html
@@ -1015,7 +1015,7 @@ all moduli $k \le 72$&nbsp; and other small moduli.
   <!-- ============================= -->
   <li class="paper"><script language="javascript">
       Paper("Modular Ternary Additive Problems with Irregular or Prime Numbers",
-      "G. Kasi Viswanadham", "",
+      "G. Kasi Viswanadham", "SelbergIdentity-KVOR-21-withbib.pdf",
       "http://www.mathnet.ru/php/journal.phtml?jrnid=tm&option_lang=eng",
       "Proceedings of the Steklov Institute of Mathematics", 
       "Volume dedicated to I.M. Vinogradov, vol. 314",
@@ -1054,7 +1054,7 @@ $\sum_{q^{20r}\le s \le q^{20r}+q^{16r}}e(sa/q)\ll q^{16r}(\log q)/\sqrt{\varphi
     <li class="paper"><script language="javascript">
 	ToAppear("Exponential sums over primes with multiplicative  coefficients",
 		 "G. Kasi Viswanadham",
-	"OR_KV_new_version-06.pdf","https://www.springer.com/journal/209",
+	"OR_KV_ new_version-06.pdf","https://www.springer.com/journal/209",
 	"Mathematische Zeitschrift", 2023, 21);
 	nbr();</script>
       <div class="resumecontent">
