--- a/index.html
+++ b/index.html
@@ -328,9 +328,10 @@ r&eacute;alis&eacute;e par
 <a href="https://fr.wikipedia.org/wiki/Sandrine_Vendel"
    style="text-decoration:none; color:#666666;font-style: oblique;font-variant:small-caps;font-weight:bolder;">
 Sandrine Vendel
-</a> pour le Mouv' en 2011.</center><br>
+</a> pour le Mouv' en 2011.</center>
+  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="./Store/Certificado_palestrante_Prof_Olivier_Ramare_assinado.pdf">Un certificat br&eacute;silien.</a>
 <center>
-  Et une autre <a href="./Store/DongaScience2019.pdf">"Avec passion et efforts, d&eacute;fiez la
+  Et <a href="./Store/DongaScience2019.pdf">"Avec passion et efforts, d&eacute;fiez la
   conjecture de Goldbach !"</a>,  </center>
 <center> de Young Jun Choi en 2019 pour le magazine
   cor&eacute;en <a href="http://dongascience.donga.com/">Donga Science</a>.
