--- a/index.html
+++ b/index.html
@@ -329,7 +329,9 @@ r&eacute;alis&eacute;e par
    style="text-decoration:none; color:#666666;font-style: oblique;font-variant:small-caps;font-weight:bolder;">
 Sandrine Vendel
 </a> pour le Mouv' en 2011.</center>
-  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="./Store/Certificado_palestrante_Prof_Olivier_Ramare_assinado.pdf">Un certificat br&eacute;silien.</a>
+<center> Un
+  certificat <a href="./Store/Certificado_palestrante_Prof_Olivier_Ramare_assinado.pdf">br&eacute;silien.</a>
+  </center>
 <center>
   Et <a href="./Store/DongaScience2019.pdf">"Avec passion et efforts, d&eacute;fiez la
   conjecture de Goldbach !"</a>,  </center>
